# trainprobe

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
examples/: huggingface_text_classification.py  lightning_image_classifier.py  pytorch_quickstart.py  stable_pretraining_ssl.py
tests/: test_probes.py
trainprobe/: __init__.py  aggregator.py  hooks.py  registry.py  runner.py  schedule.py  scope.py
trainprobe/backends/: __init__.py
trainprobe/integrations/: __init__.py
trainprobe/probes/: __init__.py  geometry.py  task.py  weight_grad.py
